--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "imask": "^6.6.0",
     "json-server": "^0.17.3",
     "leaflet": "^1.9.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
