--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.2",
+    "glob": "^9.3.5",
     "imask": "^6.6.0",
     "json-server": "^0.17.3",
     "leaflet": "^1.9.3",
     "moment": "^2.29.4",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-imask": "^6.6.0",
@@ -36,11 +37,12 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "18.2.62",
+    "@types/react-dom": "18.2.18",
     "@types/react-leaflet": "^3.0.0",
     "@types/react-select": "^5.0.1",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0"
+    "@vitejs/plugin-react": "^4.0.4",
+    "rimraf": "^4.4.1",
+    "vite": "^6.2.6"
   }
 }
